# jvc_topic_scraping

./: .gitignore  Cargo.toml  Makefile  docker-compose.yml  notes
.github/workflows/: github-ci.yml
language_model/: Dockerfile  pyproject.toml
language_model/app/: testing_db_connection.py
python/: lama.py
rust_scraper/: Cargo.toml  Dockerfile
rust_scraper/src/: main.rs
src/: main.rs
