[tool.poetry]
name = "language_model"
version = "0.1.0"
description = "Language model predicting topax buzz"
authors = ["Amir Boussejra <amir@boussejra.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
mysql-connector-python = "^8.0.29"
fastapi = "^0.79.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
